syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.grpc.Lab1";

message AddRequest{
        repeated int32 matrix1 = 1;
        repeated int32 matrix2 = 2;
        int32 size = 3;
}

message AddResponse{
        repeated int32 matrix = 1;
}

message MultiplyRequest{
        repeated int32 matrix1 = 1;
        repeated int32 matrix2 = 2;
        int32 size = 3;
}

message MultiplyResponse{
        repeated int32 matrix = 1;
}

service MatrixService{
        rpc add(AddRequest) returns (AddResponse);
        rpc multiply(MultiplyRequest) returns (MultiplyResponse);
}
